






export interface FileHandler_I{
  

    
}